BoLibDll/BoLibSetValues.h

DLLEXPORT void  setTerminalType(unsigned char type);
DLLEXPORT void	disableUtilsCoinBit();
DLLEXPORT void	setUtilRequestBitState(int bit);
DLLEXPORT void	clearUtilRequestBitState(int bit);
DLLEXPORT void  shellSendEmptyRecycler();
DLLEXPORT void  clearBankCreditReserve();
DLLEXPORT void  setSmartCardPointsRTP(unsigned char value);
//DLLEXPORT void	ESPHandPay();
DLLEXPORT void  clearPartialCollectValue();