1525/BoLibNative/NativeBoLib.cs


        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void disableUtilsCoinBit();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void shellSendEmptyRecycler();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void clearBankCreditReserve();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void clearPartialCollectValue();

        /************************************************************************/
        /* General methods                                                      */
        /************************************************************************/
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void enableNoteValidator();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void disableNoteValidator();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void printTestTicket();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 getPrinterTicketState();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public static extern string getBnvStringType(byte bnv);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int useMoneyInType(int value);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int useMoneyOutType(int value);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int useRefillType(int value);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int useVtpMeter(int value);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int useWonMeter(int value);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int useHandPayMeter(int meter);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int useTicketsMeter(int meter);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong useStakeInMeter(int meter);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public static extern string GetUniquePcbID(byte type);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void setFileAction();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void clearFileAction();

        [DllImport(DLL_NAME, CallingConvention=CallingConvention.Cdecl)]
        public static extern void setTerminalType(byte type);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void setUtilRequestBitState(int bit);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void clearUtilRequestBitState(int bit);

        /************************************************************************/
        /* Hand Pay methods                                                     */
        /************************************************************************/
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void setHandPayThreshold(uint value);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getHandPayThreshold();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        //[return: MarshalAs(UnmanagedType.I1)]
        public static extern bool getHandPayActive();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void sendHandPayToServer(uint paidOut, uint release);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        //[return: MarshalAs(UnmanagedType.I1)]
        public static extern bool performHandPay();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void cancelHandPay();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void setSmartCardPointsRTP(byte value);


        /************************************************************************/
        /* TITO methods                                                         */
        /************************************************************************/
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        //[return: MarshalAs(UnmanagedType.I1)]
        public static extern bool getTitoEnabledState();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getTitoHost();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getTitoProcessInState();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getTitoTicketPresented();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void setTitoState(int state);

        /************************************************************************/
        /* Cash Match + Demo methods                                            */
        /************************************************************************/
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong addToCashMatchCredits(ulong value);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void addCashMatchEventTotalValue(uint Value);
       
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void addCashMatchEventTotalCount(uint Value);
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong getCashMatchCredits();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getCashMatchEventMaxTotalValue();
       
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getCashMatchEventMaxValue();
       
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getCashMatchEventMaxTotalCount();
      
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getCashMatchEventTotalValue();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getCashMatchEventTotalCount();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void setCashMatchEventMaxTotalValue(uint Value);
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void setCashMatchEventMaxValue(uint Value);
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void setCashMatchEventMaxTotalCount(uint Value);
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void setDemoPlayEventMaxTotalValue(uint Value);
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void setDemoPlayEventMaxValue(uint Value);
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void setDemoPlayEventMaxTotalCount(uint Value);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getCashMatchMax();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getCashMatchEventMax();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getCashMatchValueMax();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getDemoCreditsMax();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getDemoEventsMax();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getDemoGamesMax();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getDemoPlayEventMaxTotalValue();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getDemoPlayEventMaxValue();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getDemoPlayEventMaxTotalCount();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getDemoPlayEventTotalValue();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getDemoPlayEventTotalCount();
    }
}
